# Vol

./: .gitattributes  Dependencies  Externals  INSTALL  Makefile  Makefile.am  Makefile.in  README.md  VolVolume.cpp  configure  configure.ac
.coin-or/: projDesc.xml
Vol/: INSTALL  Makefile.am  Makefile.in  README  configure  configure.ac  vol-uninstalled.pc.in  vol.pc.in
Vol/MSVisualStudio/v10/: Vol.sln
Vol/MSVisualStudio/v10/OsiVolUnitTest/: OsiVolUnitTest.vcxproj
Vol/MSVisualStudio/v10/libOsiVol/: libOsiVol.vcxproj
Vol/MSVisualStudio/v10/libVol/: libVol.vcxproj
Vol/MSVisualStudio/v6/libVol/: libVol.dsp
Vol/MSVisualStudio/v8/libVol/: libVol.vcproj
Vol/MSVisualStudio/v9/: Vol.sln  vol.sln
Vol/MSVisualStudio/v9/OsiVolUnitTest/: OsiVolUnitTest.vcproj
Vol/MSVisualStudio/v9/libOsiVol/: libOsiVol.vcproj
Vol/MSVisualStudio/v9/libVol/: libVol.vcproj
Vol/doc/: ufldoc.bib  ufldoc.ps  ufldoc.tex  volDoc.ps  volDoc.tex
Vol/examples/VolLp/: INSTALL  Makefile.in  vollp.cpp
Vol/examples/VolUfl/: Makefile.in  ufl.cpp  ufl.hpp
Vol/examples/Volume-LP/: Makefile.in  lp.cpp  lp.h  lpc.cpp  lpc.h  reader.cpp  reader.h
Vol/examples/Volume-LP/Doc/: doc.bib  doc_latex.dvi  doc_latex.ps  doc_latex.tex
Vol/inc/: config_vol.h.in
Vol/src/: Makefile.am  Makefile.in  VolConfig.h  VolVolume.cpp  VolVolume.hpp
Vol/src/OsiVol/: Makefile.am  Makefile.in  OsiVolSolverInterface.cpp  OsiVolSolverInterface.hpp  OsiVolSolverInterfaceIO.cpp  osi-vol-uninstalled.pc.in  osi-vol.pc.in
Vol/test/: Makefile.am  Makefile.in  OsiVolSolverInterfaceTest.cpp  osiUnitTest.cpp
doxydoc/: doxygen.conf.in
include/: VolVolume.hpp
stable/1.0/: INSTALL  Makefile.am  Makefile.in  configure.ac
stable/1.0/Vol/: Makefile.in  configure  configure.ac
stable/1.0/Vol/examples/VolLp/: Makefile.in
stable/1.0/Vol/examples/VolUfl/: INSTALL  ufl.hpp  ufl.par
stable/1.0/Vol/examples/Volume-LP/: README
stable/1.1/: Makefile.am  configure
stable/1.1/Vol/MSVisualStudio/v7/libVol/: libVol.vcproj
stable/1.1/Vol/examples/VolLp/: INSTALL  vollp.cpp
stable/1.1/Vol/examples/Volume-LP/: lp.par
trunk/: README
trunk/Vol/: Makefile.in  configure
trunk/Vol/doc/: volDoc.bib
trunk/Vol/examples/VolUfl/: INSTALL
trunk/Vol/examples/Volume-LP/: lpc.cpp
trunk/Vol/src/: VolVolume.cpp
