# Copyright (C) 2006 International Business Machines and others.
# All Rights Reserved.
# This file is distributed under the Eclipse Public License.

## $Id: Makefile.am 1559 2010-06-05 19:42:36Z stefan $

# Author:  Andreas Waechter           IBM    2006-04-13

AUTOMAKE_OPTIONS = foreign

########################################################################
#                         unitTest for OsiVol                          #
########################################################################

if COIN_HAS_OSITESTS

noinst_PROGRAMS = osiUnitTest

osiUnitTest_SOURCES = osiUnitTest.cpp OsiVolSolverInterfaceTest.cpp

osiUnitTest_LDADD = ../src/OsiVol/libOsiVol.la ../src/libVol.la \
  $(OSITESTS_LIBS) $(OSIVOLLIB_LIBS) $(VOLLIB_LIBS)

osiUnitTest_DEPENDENCIES = ../src/OsiVol/libOsiVol.la ../src/libVol.la \
  $(OSITESTS_DEPENDENCIES) $(OSIVOLLIB_DEPENDENCIES) $(VOLLIB_DEPENDENCIES)

AM_CPPFLAGS = \
	-I`$(CYGPATH_W) $(srcdir)/../src` \
	-I`$(CYGPATH_W) $(srcdir)/../src/OsiVol` \
	$(COINUTILS_CFLAGS) $(OSI_CFLAGS) $(OSITESTS_CFLAGS)

osiunittestflags =
if COIN_HAS_SAMPLE
  osiunittestflags += -mpsDir=`$(CYGPATH_W) $(SAMPLE_DATA)`
endif

test: osiUnitTest$(EXEEXT)
	./osiUnitTest$(EXEEXT) $(osiunittestflags)

else
test:
	@echo "********************* No test for Vol implemented *************************"
endif

.PHONY: test

########################################################################
#                          Cleaning stuff                              #
########################################################################

# Here we list everything that is not generated by the compiler, e.g.,
# output files of a program

DISTCLEANFILES = yy.mps xx.mps
